--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -38,6 +38,8 @@ $pinkDark: #a23e59;
 
 $red: #c44741;
 $redDark: #933531;
+$_deep_red : rgba(147, 8, 16, 0.9);
+
 
 $green: #009747;
 $greenDark: #004b23;
