--- a/sass/_trigger_popout.scss
+++ b/sass/_trigger_popout.scss
@@ -4,11 +4,32 @@ $_dark_text : rgba(34, 34, 34, 0.9);
 $_med_text : #6c6c6c;
 $_popout_height : 300px;
 $_border_dark : rgba(152, 151, 151, 0.93);
-$_deep_red : rgba(147, 8, 16, 0.9);
+
+.popoverlay {
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .8);
+
+  &.hide {
+    display: none;
+  }
+
+}
 
 .trigger-test-popout {
   background: $sidepanel_bg;
   padding-top: 0;
+  position: fixed;
+  top: 10%;
+  left: 0;
+  right: 0;
+  width: 80%;
+  z-index: 100;
+  margin: 0 auto 0;
 
   a {
     &:hover {
@@ -136,10 +157,10 @@ $_deep_red : rgba(147, 8, 16, 0.9);
 
                 &.option {
                   padding-left: 10px;
+                  cursor: pointer;
 
                   &.active {
                     background: darken($sidepanel_bg, 5%);
-                    font-weight: bold;
                     top: 0;
 
                     &:hover {
@@ -173,6 +194,7 @@ $_deep_red : rgba(147, 8, 16, 0.9);
                 position: absolute;
                 top: 10px;
                 left: 10px;
+                text-transform: capitalize;
               }
 
               .category {
@@ -209,6 +231,11 @@ $_deep_red : rgba(147, 8, 16, 0.9);
 
                 a {
                   color: $button_blue;
+
+                  &:hover {
+                    color: darken($button_blue, 10%);
+                  }
+
                 }
               }
 
@@ -222,7 +249,19 @@ $_deep_red : rgba(147, 8, 16, 0.9);
                 margin: 0 auto;
 
                 a {
+                  color: $success_green;
+
+                  &:hover {
+                    color: darken($success_green, 5%);
+                  }
+                }
+
+                a.ban {
                   color: $_deep_red;
+
+                  &:hover {
+                    color: darken($_deep_red, 5%);
+                  }
                 }
               }
 
@@ -320,6 +359,10 @@ $_deep_red : rgba(147, 8, 16, 0.9);
 
               a {
                 color: $button_blue;
+
+                &:hover {
+                  color: darken($button_blue, 10%);
+                }
               }
             }
 
