--- a/sass/_binded_trigger_box.scss
+++ b/sass/_binded_trigger_box.scss
@@ -260,7 +260,6 @@ $overLayBG : rgba(0, 0, 0, .5);
         width: 100%;
         position: relative;
         cursor: pointer;
-        overflow: hidden;
 
         &:nth-child(odd){
          background: rgba(255,255,255, .04);
@@ -322,9 +321,10 @@ $overLayBG : rgba(0, 0, 0, .5);
 
       .key {
         display: block;
-        width: 28.5%;
+        width: 27%;
         float: left;
         padding-left: 1.5%;
+        padding-right: 1.5%;
       }
 
       .value {
@@ -393,6 +393,14 @@ $overLayBG : rgba(0, 0, 0, .5);
         top: -42px;
         height: 318px;
 
+        .inner-details {
+          display: none;
+
+          &.show {
+            display: block;
+          }
+        }
+
         h2 {
           margin-bottom: 1em;
         }
@@ -412,6 +420,20 @@ $overLayBG : rgba(0, 0, 0, .5);
 
           .meta-key {
             color: rgba(255, 255, 255, .6);
+          }
+
+          .meta-value {
+            .val {
+              pre {
+                width: 100%;
+                max-height: 150px;
+                overflow: scroll;
+
+                code {
+
+                }
+              }
+            }
           }
         }
 
